--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -346,6 +346,7 @@
   "anima.ui.mystic.spell.via.title": "Vía / Subvía",
   "anima.ui.mystic.spell.via.war.title": "Guerra",
   "anima.ui.mystic.spell.via.water.title": "Agua",
+  "anima.ui.mystic.spell.via.alternative.title": "Alternativo",
   "anima.ui.mystic.spellMaintenance.cost.title": "Coste",
   "anima.ui.mystic.spellMaintenance.name.title": "Conjuro / Criatura",
   "anima.ui.mystic.spellMaintenance.title": "Mantenimientos diarios",
@@ -401,8 +402,8 @@
   "anima.ui.psychic.psychicPowers.discipline.teleportation.title": "Teletransporte",
   "anima.ui.psychic.psychicPowers.discipline.light.title": "Luz",
   "anima.ui.psychic.psychicPowers.discipline.hypersensitivity.title": "Hipersensibilidad",
-  "anima.ui.psychic.psychicPowers.discipline.unknown.title": "Disciplina Desconocida",
   "anima.ui.psychic.psychicPowers.discipline.matrixPowers.title": "-",
+  "anima.ui.psychic.psychicPowers.discipline.unknown.title": "Disciplina Desconocida",
   "anima.ui.psychic.psychicPowers.mentalPattern.introversion.title": "Introversión",
   "anima.ui.psychic.psychicPowers.mentalPattern.extroversion.title": "Extroversión",
   "anima.ui.psychic.psychicPowers.mentalPattern.madness.title": "Locura",
@@ -410,6 +411,7 @@
   "anima.ui.psychic.psychicPowers.mentalPattern.compassion.title": "Compasión",
   "anima.ui.psychic.psychicPowers.mentalPattern.cowardice.title": "Cobardía",
   "anima.ui.psychic.psychicPowers.mentalPattern.courage.title": "Valentía",
+  "anima.ui.psychic.psychicPowers.mentalPattern.unknown.title": "Patrón Desconocido",
   "anima.ui.psychic.psychicPowers.power.footer.bonus.title": "Bono",
   "anima.ui.psychic.psychicPowers.power.footer.hasMaintenance.title": "Mant.",
   "anima.ui.psychic.psychicPowers.power.footer.visible.title": "Visible",
