--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -328,6 +328,7 @@
   "anima.ui.mystic.spell.via.title": "Voie / Voie Secondaire",
   "anima.ui.mystic.spell.via.war.title": "Guerre",
   "anima.ui.mystic.spell.via.water.title": "Eau",
+  "anima.ui.mystic.spell.via.alternative.title": "Alternative",
   "anima.ui.mystic.spellMaintenance.cost.title": "Coût",
   "anima.ui.mystic.spellMaintenance.name.title": "Conjuration / Créature",
   "anima.ui.mystic.spellMaintenance.title": "Maintiens quotidiens",
@@ -367,8 +368,14 @@
   "anima.ui.psychic.psychicPowers.discipline.hypersensitivity.title": "Hypersensibilité",
   "anima.ui.psychic.psychicPowers.discipline.matrixPowers.title": "-",
   "anima.ui.psychic.psychicPowers.discipline.unknown.title": "Unknown Discipline",
-
-
+  "anima.ui.psychic.psychicPowers.mentalPattern.introversion.title": "Introversion",
+  "anima.ui.psychic.psychicPowers.mentalPattern.extroversion.title": "Extraversion",
+  "anima.ui.psychic.psychicPowers.mentalPattern.madness.title": "Folie",
+  "anima.ui.psychic.psychicPowers.mentalPattern.psychopath.title": "Psychopathe",
+  "anima.ui.psychic.psychicPowers.mentalPattern.compassion.title": "Compassion",
+  "anima.ui.psychic.psychicPowers.mentalPattern.cowardice.title": "Lâcheté",
+  "anima.ui.psychic.psychicPowers.mentalPattern.courage.title": "Courage",
+  "anima.ui.psychic.psychicPowers.mentalPattern.unknown.title": "Unknown Attache Psychique",
   "anima.ui.psychic.mentalPattern.bonus.title": "Bonus",
   "anima.ui.psychic.mentalPattern.name.title": "Type",
   "anima.ui.psychic.mentalPattern.penalty.title": "Malus",
