update - bodyparts on Actor

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -190,7 +190,12 @@
   "anima.ui.elanSection.elanRow.name": "Power",
   "anima.ui.elanSection.title": "Elan",
   "anima.ui.experienceSection.title": "Experience",
+  "anima.ui.general.body.title": "Body",
+  "anima.ui.general.body.bodyParts.title": "Body part",
+  "anima.ui.general.body.modifier.title": "Modifier",
+  "anima.ui.general.body.weakspot.title": "Weakspot?",
   "anima.ui.general.destinyPoints.title": "Destiny points",
+  "anima.ui.general.body.openArmor.title": "Open armor?",
   "anima.ui.general.fatigue.title": "Fatigue",
   "anima.ui.general.initiative.base.title": "Turn",
   "anima.ui.general.life.current.title": "Life points",
