--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -190,6 +190,11 @@
   "anima.ui.elanSection.elanRow.name": "Potencia",
   "anima.ui.elanSection.title": "Elan",
   "anima.ui.experienceSection.title": "Experiencia",
+  "anima.ui.general.body.title": "Cuerpo",
+  "anima.ui.general.body.bodyParts.title": "Parte del cuerpo",
+  "anima.ui.general.body.modifier.title": "Modificador",
+  "anima.ui.general.body.weakspot.title": "Punto débil?",
+  "anima.ui.general.body.openArmor.title": "Armadura abierta?",
   "anima.ui.general.destinyPoints.title": "Puntos de destino",
   "anima.ui.general.fatigue.title": "Cansancio",
   "anima.ui.general.initiative.base.title": "Turno",
