new - applyCritic option GMCombatDialog

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -691,6 +691,7 @@
   "macros.combat.dialog.combatMod.targeted.title": "Targeted attack",
   "macros.combat.dialog.combatMod.surprised.title": "Surprised",
   "macros.combat.dialog.applyDamage.title": "Apply damage",
+  "macros.combat.dialog.applyCritic.title": "Apply critic",
   "macros.combat.dialog.counterAttackBonus.title": "Counterattack bonus",
   "macros.combat.dialog.counterAttackButton.title": "Counterattack",
   "macros.combat.dialog.criticRollButton.title": "Roll Critic",
