--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -691,6 +691,7 @@
   "macros.combat.dialog.combatMod.targeted.title": "Ataque apuntado",
   "macros.combat.dialog.combatMod.surprised.title": "Sorprendido",
   "macros.combat.dialog.applyDamage.title": "Aplicar daño",
+  "macros.combat.dialog.applyCritic.title": "Aplicar crítico",
   "macros.combat.dialog.counterAttackBonus.title": "Bono al contraataque",
   "macros.combat.dialog.counterAttackButton.title": "Contraatacar",
   "macros.combat.dialog.criticRollButton.title": "Tirada de Crítico",
