--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -355,6 +355,8 @@
   "anima.ui.mystic.summoning.control.title": "Control",
   "anima.ui.mystic.summoning.summon.title": "Summon",
   "anima.ui.mystic.summoning.title": "Summoning",
+  "anima.ui.mystic.mysticSettings.title": "Mystic Settings",
+  "anima.ui.mystic.mysticSettings.aptitudeForMagicDevelopment.title": "Aptitude for magic development",
   "anima.ui.mystic.tabs.main": "Main",
   "anima.ui.mystic.tabs.secondaries": "Spells",
   "anima.ui.mystic.zeon.accumulated.title": "Accumulated",
