--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -534,6 +534,8 @@
   "anima.ui.systemSettings.useDistanceAutomation.hint.title": "Calculates the distance between the attacker and defender to automatically add modifiers for ranged combat",
   "anima.ui.systemSettings.prefixAttackMacro.title": "Prefix of Attack Macros in Combat",
   "anima.ui.systemSettings.prefixAttackMacro.hint.title": "If empty, it will take the name of the weapon as the Macro name in Combat, otherwise it will be the Prefix + Name of the weapon",
+  "anima.ui.systemSettings.defaultAttackMacro.title": "Default Macro for Attacks",
+  "anima.ui.systemSettings.defaultAttackMacro.hint.title": "If no Macros are found, it will take the name of the Macro that is entered here for the Combat",
   "anima.ui.systemSettings.defaultProjectileMacro.title": "Default Macro for Projectiles",
   "anima.ui.systemSettings.defaultProjectileMacro.hint.title": "If the weapon is a shooting projectile, it will take the name of the Macro that is entered here for the Combat",
   "anima.ui.systemSettings.missValueAttackMacro.title": "Attack Failure Value for Animations",
