--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -537,6 +537,8 @@
   "anima.ui.systemSettings.useDistanceAutomation.hint.title": "Calcula la distancia entre el atacante y el defensor para agregar de forma automática los modificadores correspondiente al combate a distancia",
   "anima.ui.systemSettings.prefixAttackMacro.title": "Prefijo de las Macros de Ataque en el Combate",
   "anima.ui.systemSettings.prefixAttackMacro.hint.title": "Si queda vacío tomara el nombre del arma como nombre de Macro en el Combate, de lo contrario será el Prefijo + Nombre del arma",
+  "anima.ui.systemSettings.defaultAttackMacro.title": "Macro por defecto para Ataques",
+  "anima.ui.systemSettings.defaultAttackMacro.hint.title": "En caso de no encontrar un Macro para el ataque tomará el nombre del Macro que se ingrese aquí para el Combate",
   "anima.ui.systemSettings.defaultProjectileMacro.title": "Macro por defecto para Proyectiles",
   "anima.ui.systemSettings.defaultProjectileMacro.hint.title": "En caso de que el arma sea un projectil de disparo tomará el nombre del Macro que se ingrese aquí para el Combate",
   "anima.ui.systemSettings.missValueAttackMacro.title": "Valor de Fallo al Atacar para la Animación",
