update - repleace old metamagics with newer version

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -367,6 +367,46 @@
   "anima.ui.mystic.mysticSettings.aptitudeForMagicDevelopment.title": "Apto para el desarrollo de la magia",
   "anima.ui.mystic.tabs.main": "Principal",
   "anima.ui.mystic.tabs.secondaries": "Conjuros",
+  "anima.ui.mystic.tabs.metamagics": "Metamagias",
+  "anima.ui.mystic.metamagics.name.title": "Metamagia",
+  "anima.ui.mystic.metamagics.spheres.title": "Esferas",
+  "anima.ui.mystic.metamagics.empoweredShields.title": "Empowered Shields",
+  "anima.ui.mystic.metamagics.mysticAccuracy.title": "Mystic Accuracy",
+  "anima.ui.mystic.metamagics.increasedDestruction.title": "Increased Destruction",
+  "anima.ui.mystic.metamagics.expandedArea.title": "Expanded Area",
+  "anima.ui.mystic.metamagics.removeProtection.title": "Remove Protection",
+  "anima.ui.mystic.metamagics.defensiveExpertise.title": "Defensive Expertise",
+  "anima.ui.mystic.metamagics.offensiveExpertise.title": "Offensive Expertise",
+  "anima.ui.mystic.metamagics.doubleDamage.title": "Double Damage",
+  "anima.ui.mystic.metamagics.combinedMagic.title": "Combined Magic",
+  "anima.ui.mystic.metamagics.persistentEffects.title": "Persistent Effects",
+  "anima.ui.mystic.metamagics.definedMagicProjection.title": "Defined Magic Projection",
+  "anima.ui.mystic.metamagics.exploitationOfNaturalEnergy.title": "Exploitation of Natural Energy",
+  "anima.ui.mystic.metamagics.advancedZeonRegeneration.title": "Advanced Zeon Regeneration",
+  "anima.ui.mystic.metamagics.elevation.title": "Elevation",
+  "anima.ui.mystic.metamagics.avatar.title": "Avatar",
+  "anima.ui.mystic.metamagics.unlimitedZeon.title": "Unlimited Zeon",
+  "anima.ui.mystic.metamagics.secureDefense.title": "SecureDefense",
+  "anima.ui.mystic.metamagics.lifeMagic.title": "Life Magic",
+  "anima.ui.mystic.metamagics.feelMagic.title": "Feel Magic",
+  "anima.ui.mystic.metamagics.hiddenMagic.title": "Hidden Magic",
+  "anima.ui.mystic.metamagics.spiritualLoop.title": "Spiritual Loop",
+  "anima.ui.mystic.metamagics.controlSpace.title": "Control Space",
+  "anima.ui.mystic.metamagics.energyControl.title": "Energy Control",
+  "anima.ui.mystic.metamagics.endureSupernaturalDamage.title": "Endure Supernatural Damage",
+  "anima.ui.mystic.metamagics.transferMagic.title": "Transfer Magic",
+  "anima.ui.mystic.metamagics.forceSpeed.title": "Force Speed",
+  "anima.ui.mystic.metamagics.doubleInnateSpells.title": "Double Innate Spells",
+  "anima.ui.mystic.metamagics.naturalMaintenance.title": "Natural Maintenance",
+  "anima.ui.mystic.metamagics.mysticConcentration.title": "Mystic Concentration",
+  "anima.ui.mystic.metamagics.spellSpecialist.title": "Spell Specialist",
+  "anima.ui.mystic.metamagics.pierceResistances.title": "Pierce Resistances",
+  "anima.ui.mystic.metamagics.increasedRange.title": "Increased Range",
+  "anima.ui.mystic.metamagics.bindSpells.title": "Bind Spells",
+  "anima.ui.mystic.metamagics.maximizeSpells.title": "Maximize Spells",
+  "anima.ui.mystic.metamagics.doubleSpell.title": "Double Spell",
+  "anima.ui.mystic.metamagics.superiorInnateSpell.title": "Superior Innate Spell",
+  "anima.ui.mystic.metamagics.highMagic.title": "High Magic",
   "anima.ui.mystic.zeon.accumulated.title": "Acumulado",
   "anima.ui.mystic.zeon.final.title": "Final",
   "anima.ui.mystic.zeon.title": "Zeon",
