--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -368,7 +368,7 @@
   "anima.ui.mystic.tabs.metamagics": "Metamagics",
   "anima.ui.mystic.metamagics.name.title": "Metamagic",
   "anima.ui.mystic.metamagics.spheres.title": "Spheres",
-  "anima.ui.mystic.metamagics.arcaneWarfare.title": "Arcane Warfare",
+  "anima.ui.mystic.metamagics.arcaneWarfare.title": "Mastery of Arcane Warfare",
   "anima.ui.mystic.metamagics.empoweredShields.title": "Empowered Shields",
   "anima.ui.mystic.metamagics.mysticAccuracy.title": "Mystic Accuracy",
   "anima.ui.mystic.metamagics.increasedDestruction.title": "Increased Destruction",
@@ -387,7 +387,7 @@
   "anima.ui.mystic.metamagics.avatar.title": "Avatar",
   "anima.ui.mystic.metamagics.unlimitedZeon.title": "Unlimited Zeon",
   "anima.ui.mystic.metamagics.arcaneEsoterica.title": "Arcane Esoterica",
-  "anima.ui.mystic.metamagics.secureDefense.title": "SecureDefense",
+  "anima.ui.mystic.metamagics.secureDefense.title": "Secure Defense",
   "anima.ui.mystic.metamagics.lifeMagic.title": "Life Magic",
   "anima.ui.mystic.metamagics.feelMagic.title": "Feel Magic",
   "anima.ui.mystic.metamagics.hiddenMagic.title": "Hidden Magic",
