--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -370,43 +370,47 @@
   "anima.ui.mystic.tabs.metamagics": "Metamagias",
   "anima.ui.mystic.metamagics.name.title": "Metamagia",
   "anima.ui.mystic.metamagics.spheres.title": "Esferas",
-  "anima.ui.mystic.metamagics.empoweredShields.title": "Empowered Shields",
-  "anima.ui.mystic.metamagics.mysticAccuracy.title": "Mystic Accuracy",
-  "anima.ui.mystic.metamagics.increasedDestruction.title": "Increased Destruction",
-  "anima.ui.mystic.metamagics.expandedArea.title": "Expanded Area",
-  "anima.ui.mystic.metamagics.removeProtection.title": "Remove Protection",
-  "anima.ui.mystic.metamagics.defensiveExpertise.title": "Defensive Expertise",
-  "anima.ui.mystic.metamagics.offensiveExpertise.title": "Offensive Expertise",
-  "anima.ui.mystic.metamagics.doubleDamage.title": "Double Damage",
-  "anima.ui.mystic.metamagics.combinedMagic.title": "Combined Magic",
-  "anima.ui.mystic.metamagics.persistentEffects.title": "Persistent Effects",
-  "anima.ui.mystic.metamagics.definedMagicProjection.title": "Defined Magic Projection",
-  "anima.ui.mystic.metamagics.exploitationOfNaturalEnergy.title": "Exploitation of Natural Energy",
-  "anima.ui.mystic.metamagics.advancedZeonRegeneration.title": "Advanced Zeon Regeneration",
-  "anima.ui.mystic.metamagics.elevation.title": "Elevation",
+  "anima.ui.mystic.metamagics.arcaneWarfare.title": "Bellum Domini Archanum",
+  "anima.ui.mystic.metamagics.empoweredShields.title": "Escudos Potenciados",
+  "anima.ui.mystic.metamagics.mysticAccuracy.title": "Presición Mística",
+  "anima.ui.mystic.metamagics.increasedDestruction.title": "Incremento Destructivo",
+  "anima.ui.mystic.metamagics.expandedArea.title": "Área Potenciada",
+  "anima.ui.mystic.metamagics.removeProtection.title": "Eliminar Protección",
+  "anima.ui.mystic.metamagics.defensiveExpertise.title": "Erudición Defensiva",
+  "anima.ui.mystic.metamagics.offensiveExpertise.title": "Erudición Ofensiva",
+  "anima.ui.mystic.metamagics.doubleDamage.title": "Doble Daño",
+  "anima.ui.mystic.metamagics.arcanePower.title": "Potestas Archanum",
+  "anima.ui.mystic.metamagics.combinedMagic.title": "Magia Combinada",
+  "anima.ui.mystic.metamagics.persistentEffects.title": "Efectos Persistentes",
+  "anima.ui.mystic.metamagics.definedMagicProjection.title": "Proyección Mágica Determinada",
+  "anima.ui.mystic.metamagics.exploitationOfNaturalEnergy.title": "Explotación de la Energía ",
+  "anima.ui.mystic.metamagics.advancedZeonRegeneration.title": "Regeneración Zeónica Avanzada",
+  "anima.ui.mystic.metamagics.elevation.title": "Elevación",
   "anima.ui.mystic.metamagics.avatar.title": "Avatar",
-  "anima.ui.mystic.metamagics.unlimitedZeon.title": "Unlimited Zeon",
-  "anima.ui.mystic.metamagics.secureDefense.title": "SecureDefense",
-  "anima.ui.mystic.metamagics.lifeMagic.title": "Life Magic",
-  "anima.ui.mystic.metamagics.feelMagic.title": "Feel Magic",
-  "anima.ui.mystic.metamagics.hiddenMagic.title": "Hidden Magic",
-  "anima.ui.mystic.metamagics.spiritualLoop.title": "Spiritual Loop",
-  "anima.ui.mystic.metamagics.controlSpace.title": "Control Space",
-  "anima.ui.mystic.metamagics.energyControl.title": "Energy Control",
-  "anima.ui.mystic.metamagics.endureSupernaturalDamage.title": "Endure Supernatural Damage",
-  "anima.ui.mystic.metamagics.transferMagic.title": "Transfer Magic",
-  "anima.ui.mystic.metamagics.forceSpeed.title": "Force Speed",
-  "anima.ui.mystic.metamagics.doubleInnateSpells.title": "Double Innate Spells",
-  "anima.ui.mystic.metamagics.naturalMaintenance.title": "Natural Maintenance",
-  "anima.ui.mystic.metamagics.mysticConcentration.title": "Mystic Concentration",
-  "anima.ui.mystic.metamagics.spellSpecialist.title": "Spell Specialist",
-  "anima.ui.mystic.metamagics.pierceResistances.title": "Pierce Resistances",
-  "anima.ui.mystic.metamagics.increasedRange.title": "Increased Range",
-  "anima.ui.mystic.metamagics.bindSpells.title": "Bind Spells",
-  "anima.ui.mystic.metamagics.maximizeSpells.title": "Maximize Spells",
-  "anima.ui.mystic.metamagics.doubleSpell.title": "Double Spell",
-  "anima.ui.mystic.metamagics.superiorInnateSpell.title": "Superior Innate Spell",
-  "anima.ui.mystic.metamagics.highMagic.title": "High Magic",
+  "anima.ui.mystic.metamagics.unlimitedZeon.title": "Zeon Ilimitado",
+  "anima.ui.mystic.metamagics.arcaneEsoterica.title": "Esoteros Archanum",
+  "anima.ui.mystic.metamagics.secureDefense.title": "Seguridad Defensiva",
+  "anima.ui.mystic.metamagics.lifeMagic.title": "Magia Vital",
+  "anima.ui.mystic.metamagics.feelMagic.title": "Sentir la Magia",
+  "anima.ui.mystic.metamagics.hiddenMagic.title": "Magia Oculta",
+  "anima.ui.mystic.metamagics.spiritualLoop.title": "Bucle Existencial",
+  "anima.ui.mystic.metamagics.controlSpace.title": "Control del Espacio",
+  "anima.ui.mystic.metamagics.energyControl.title": "Control de la Energía",
+  "anima.ui.mystic.metamagics.endureSupernaturalDamage.title": "Aguante al Daño Sobrenatural",
+  "anima.ui.mystic.metamagics.transferMagic.title": "Transmisión de Magia",
+  "anima.ui.mystic.metamagics.forceSpeed.title": "Forzar Velocidad",
+  "anima.ui.mystic.metamagics.doubleInnateSpells.title": "Doble Conjuro Innato",
+  "anima.ui.mystic.metamagics.naturalMaintenance.title": "Mantenimiento Añadido",
+  "anima.ui.mystic.metamagics.arcaneKnowledge.title": "Cognos Archanum",
+  "anima.ui.mystic.metamagics.mysticConcentration.title": "Concentración Mística",
+  "anima.ui.mystic.metamagics.spellSpecialist.title": "Conjuro Especialista",
+  "anima.ui.mystic.metamagics.pierceResistances.title": "Romper Resistencias",
+  "anima.ui.mystic.metamagics.increasedRange.title": "Distancia Incrementada",
+  "anima.ui.mystic.metamagics.bindSpells.title": "Enlazar Conjuros",
+  "anima.ui.mystic.metamagics.maximizeSpells.title": "Maximación de Conjuros",
+  "anima.ui.mystic.metamagics.doubleSpell.title": "Doble Conjuro",
+  "anima.ui.mystic.metamagics.superiorInnateSpell.title": "Conjuro Innato Superior",
+  "anima.ui.mystic.metamagics.highMagic.title": "Alta Magia",
   "anima.ui.mystic.zeon.accumulated.title": "Acumulado",
   "anima.ui.mystic.zeon.final.title": "Final",
   "anima.ui.mystic.zeon.title": "Zeon",
