--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -696,6 +696,7 @@
   "dialogs.spellCasting.warning.innateMagic": "You don't have enough Innate Magic",
   "dialogs.spellCasting.warning.preparedSpell": "You do not have this Spell Prepared",
   "dialogs.spellCasting.warning.zeonAccumulated": "You don't have enough Accumulated Zeon",
+  "dialogs.spellCasting.warning.zeonPool": "You don't have enough Zeon",
   "dialogs.specificAttack.warning.disableMustChoose": "You must choose a Targeted Attack",
   "macros.combat.dialog.applyAndCloseButton.title": "Apply and close",
   "anima.ui.systemSettings.autoAcceptCombatRequests.title": "Auto accept combat requests",
