--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -739,6 +739,8 @@
   "macros.combat.dialog.combatMod.knockOut.title": "KnockOut",
   "macros.combat.dialog.combatMod.targeted.title": "Targeted attack",
   "macros.combat.dialog.combatMod.surprised.title": "Surprised",
+  "macros.combat.dialog.combatMod.offensiveExpertise.title": "Offensive Expertise",
+  "macros.combat.dialog.combatMod.defensiveExpertise.title": "Defensive Expertise",
   "macros.combat.dialog.applyDamage.title": "Apply damage",
   "macros.combat.dialog.applyCritic.title": "Apply critic",
   "macros.combat.dialog.counterAttackBonus.title": "Counterattack bonus",
