fix - lang knockOut

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -691,7 +691,7 @@
   "macros.combat.dialog.combatMod.knockDownSmallWeapon.title": "Derribo con arma pequeña",
   "macros.combat.dialog.combatMod.disarm.title": "Desarmar",
   "macros.combat.dialog.combatMod.immobilize.title": "Presa",
-  "macros.combat.dialog.combatMod.knockOut.title": "Inconsciencia",
+  "macros.combat.dialog.combatMod.knockOut.title": "Inconsciencia sin Contundente",
   "macros.combat.dialog.combatMod.targeted.title": "Ataque apuntado",
   "macros.combat.dialog.combatMod.surprised.title": "Sorprendido",
   "macros.combat.dialog.applyDamage.title": "Aplicar daño",
@@ -858,7 +858,7 @@
   "macros.combat.dialog.specificAttack.disable.title": "Inutilizar",
   "macros.combat.dialog.specificAttack.disarm.title": "Desarmar",
   "macros.combat.dialog.specificAttack.immobilize.title": "Presa",
-  "macros.combat.dialog.specificAttack.knockOut.title": "Inconsciencia sin Contundente",
+  "macros.combat.dialog.specificAttack.knockOut.title": "Inconsciencia",
   "macros.combat.dialog.specificAttack.targeted.title": "Apuntado",
   "macros.combat.dialog.weapon.critic.title": "Crítico",
   "macros.combat.dialog.weapon.title": "Arma",
