update - apply values for multiple targets

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -654,9 +654,11 @@
   "dialogs.spellCasting.warning.zeonAccumulated": "You don't have enough Accumulated Zeon",
   "dialogs.specificAttack.warning.disableMustChoose": "You must choose a Targeted Attack",
   "macros.combat.dialog.applyAndCloseButton.title": "Apply and close",
+  "macros.combat.dialog.applyAndNextButton.title": "Apply and continue",
   "anima.ui.systemSettings.autoAcceptCombatRequests.title": "Auto accept combat requests",
   "anima.ui.systemSettings.autoAcceptCombatRequests.hint.title": "Combat requests sent to GM will be auto accepted depending if this option is active",
-  "macros.combat.dialog.applyAndCloseButtonTooltip.title": "Apply changes in actors such as fatigue points used or damage",
+  "macros.combat.dialog.applyAndCloseButtonTooltip.title": "Apply changes in actors such as fatigue points used or damage and ends combat",
+  "macros.combat.dialog.applyAndNextButtonTooltip.title": "Apply changes in current defender actor such as fatigue points used or damage and move on to next defender actor",
   "macros.combat.dialog.at.title": "AT",
   "macros.combat.dialog.attack.title": "Attack",
   "macros.combat.dialog.attackButton.title": "Send attack",
