--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -656,7 +656,9 @@
   "dialogs.spellCasting.warning.zeonAccumulated": "No cuentas con suficiente Zeon Acumulado",
   "dialogs.specificAttack.warning.disableMustChoose": "Debes elegir un Ataque Apuntado",
   "macros.combat.dialog.applyAndCloseButton.title": "Aplicar y salir",
-  "macros.combat.dialog.applyAndCloseButtonTooltip.title": "Aplicar cambios como los puntos de fatiga usados o el daño en las fichas de los personajes implicados",
+  "macros.combat.dialog.applyAndNextButton.title": "Aplicar y continuar",
+  "macros.combat.dialog.applyAndCloseButtonTooltip.title": "Aplicar cambios como los puntos de fatiga usados o el daño en las fichas de los personajes implicados y finaliza el combate",
+  "macros.combat.dialog.applyAndNextButtonTooltip.title": "Aplicar cambios como los puntos de fatiga usados o el daño en la ficha del defensor actual y continua con el siguiente",
   "macros.combat.dialog.at.title": "TA",
   "macros.combat.dialog.attack.title": "Ataque",
   "macros.combat.dialog.attackButton.title": "Enviar ataque",
