--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -700,7 +700,7 @@
   "dialogs.spellCasting.warning.preparedSpell": "You do not have this Spell Prepared",
   "dialogs.spellCasting.warning.zeonAccumulated": "You don't have enough Accumulated Zeon",
   "dialogs.spellCasting.warning.zeonPool": "You don't have enough Zeon",
-  "dialogs.specificAttack.warning.disableMustChoose": "You must choose a Targeted Attack",
+  "dialogs.specialPorpuseAttack.warning.disableMustChoose": "You must choose a Directed Attack",
   "macros.combat.dialog.applyAndCloseButton.title": "Apply and close",
   "anima.ui.systemSettings.autoAcceptCombatRequests.title": "Auto accept combat requests",
   "anima.ui.systemSettings.autoAcceptCombatRequests.hint.title": "Combat requests sent to GM will be auto accepted depending if this option is active",
@@ -735,12 +735,12 @@
   "macros.combat.dialog.combatMod.secondaryCritic.title": "Secondary critic used",
   "macros.combat.dialog.combatMod.multipleDefensesPenalty.title": "Defense penalty",
   "macros.combat.dialog.combatMod.fatigueUsed.title": "Used fatigue",
-  "macros.combat.dialog.combatMod.knockDown.title": "KnockDown",
-  "macros.combat.dialog.combatMod.knockDownSmallWeapon.title": "KnockDown with small weapon",
+  "macros.combat.dialog.combatMod.takeDown.title": "Take Down",
+  "macros.combat.dialog.combatMod.takeDownSmallWeapon.title": "Take Down with small weapon",
   "macros.combat.dialog.combatMod.disarm.title": "Disarm",
-  "macros.combat.dialog.combatMod.immobilize.title": "Immobilize",
-  "macros.combat.dialog.combatMod.knockOut.title": "KnockOut without Impact",
-  "macros.combat.dialog.combatMod.targeted.title": "Targeted attack",
+  "macros.combat.dialog.combatMod.trapping.title": "Trapping",
+  "macros.combat.dialog.combatMod.knockOut.title": "Knock Out without Impact",
+  "macros.combat.dialog.combatMod.directed.title": "Directed Attack",
   "macros.combat.dialog.combatMod.surprised.title": "Surprised",
   "macros.combat.dialog.combatMod.offensiveExpertise.title": "Offensive Expertise",
   "macros.combat.dialog.combatMod.defensiveExpertise.title": "Defensive Expertise",
@@ -871,43 +871,43 @@
   "macros.combat.dialog.warning.supernaturalShieldNotFound.mystic": "You do not have any active mystic shields, click on New Shield",
   "macros.combat.dialog.warning.supernaturalShieldNotFound.psychic": "You do not have any active psychic shields, click on New Shield",
   "macros.combat.dialog.hasCritic.title": "Perform a critical attack on {target}",
-  "macros.combat.dialog.targetedAttack.title": "Targeted attack",
-  "macros.combat.dialog.targetedAttack.none.title": "-",
-  "macros.combat.dialog.targetedAttack.neck.title": "Neck",
-  "macros.combat.dialog.targetedAttack.head.title": "Head",
-  "macros.combat.dialog.targetedAttack.elbow.title": "Elbow",
-  "macros.combat.dialog.targetedAttack.heart.title": "Heart",
-  "macros.combat.dialog.targetedAttack.groin.title": "Groin",
-  "macros.combat.dialog.targetedAttack.foot.title": "Foot",
-  "macros.combat.dialog.targetedAttack.hand.title": "Hand",
-  "macros.combat.dialog.targetedAttack.knee.title": "Knee",
-  "macros.combat.dialog.targetedAttack.abdomen.title": "Abdomen",
-  "macros.combat.dialog.targetedAttack.arm.title": "Arm",
-  "macros.combat.dialog.targetedAttack.upperForearm.title": "Upper forearm",
-  "macros.combat.dialog.targetedAttack.lowerForearm.title": "Lower forearm",
-  "macros.combat.dialog.targetedAttack.leg.title": "Leg",
-  "macros.combat.dialog.targetedAttack.thigh.title": "Thigh",
-  "macros.combat.dialog.targetedAttack.calf.title": "Calf",
-  "macros.combat.dialog.targetedAttack.torso.title": "Torso",
-  "macros.combat.dialog.targetedAttack.ribs.title": "Ribs",
-  "macros.combat.dialog.targetedAttack.stomach.title": "Stomach",
-  "macros.combat.dialog.targetedAttack.kidneys.title": "Kidneys",
-  "macros.combat.dialog.targetedAttack.chest.title": "Chest",
-  "macros.combat.dialog.targetedAttack.eye.title": "Eye",
-  "macros.combat.dialog.targetedAttack.wrist.title": "Wrist",
-  "macros.combat.dialog.targetedAttack.shoulder.title": "Shoulder",
-  "macros.combat.dialog.targetedAttack.side.left.title": "[Left]",
-  "macros.combat.dialog.targetedAttack.side.right.title": "[Right]",
-  "macros.combat.dialog.targetedAttack.side.none.title": "[-]",
-  "macros.combat.dialog.specificAttack.title": "Specific Attack",
-  "macros.combat.dialog.specificAttack.causeDamage.title": "Apply damage",
-  "macros.combat.dialog.specificAttack.none.title": "-",
-  "macros.combat.dialog.specificAttack.knockDown.title": "Knock down",
-  "macros.combat.dialog.specificAttack.disable.title": "Disable",
-  "macros.combat.dialog.specificAttack.disarm.title": "Disarm",
-  "macros.combat.dialog.specificAttack.immobilize.title": "Immobilize",
-  "macros.combat.dialog.specificAttack.knockOut.title": "Knock out",
-  "macros.combat.dialog.specificAttack.targeted.title": "Targeted",
+  "macros.combat.dialog.directedAttack.title": "Directed Attack",
+  "macros.combat.dialog.directedAttack.none.title": "-",
+  "macros.combat.dialog.directedAttack.neck.title": "Neck",
+  "macros.combat.dialog.directedAttack.head.title": "Head",
+  "macros.combat.dialog.directedAttack.elbow.title": "Elbow",
+  "macros.combat.dialog.directedAttack.heart.title": "Heart",
+  "macros.combat.dialog.directedAttack.groin.title": "Groin",
+  "macros.combat.dialog.directedAttack.foot.title": "Foot",
+  "macros.combat.dialog.directedAttack.hand.title": "Hand",
+  "macros.combat.dialog.directedAttack.knee.title": "Knee",
+  "macros.combat.dialog.directedAttack.abdomen.title": "Abdomen",
+  "macros.combat.dialog.directedAttack.arm.title": "Arm",
+  "macros.combat.dialog.directedAttack.upperForearm.title": "Upper forearm",
+  "macros.combat.dialog.directedAttack.lowerForearm.title": "Lower forearm",
+  "macros.combat.dialog.directedAttack.leg.title": "Leg",
+  "macros.combat.dialog.directedAttack.thigh.title": "Thigh",
+  "macros.combat.dialog.directedAttack.calf.title": "Calf",
+  "macros.combat.dialog.directedAttack.torso.title": "Torso",
+  "macros.combat.dialog.directedAttack.ribs.title": "Ribs",
+  "macros.combat.dialog.directedAttack.stomach.title": "Stomach",
+  "macros.combat.dialog.directedAttack.kidneys.title": "Kidneys",
+  "macros.combat.dialog.directedAttack.chest.title": "Chest",
+  "macros.combat.dialog.directedAttack.eye.title": "Eye",
+  "macros.combat.dialog.directedAttack.wrist.title": "Wrist",
+  "macros.combat.dialog.directedAttack.shoulder.title": "Shoulder",
+  "macros.combat.dialog.directedAttack.side.left.title": "[Left]",
+  "macros.combat.dialog.directedAttack.side.right.title": "[Right]",
+  "macros.combat.dialog.directedAttack.side.none.title": "[-]",
+  "macros.combat.dialog.specialPorpuseAttack.title": "Special Porpuse Attack",
+  "macros.combat.dialog.specialPorpuseAttack.causeDamage.title": "Apply damage",
+  "macros.combat.dialog.specialPorpuseAttack.none.title": "-",
+  "macros.combat.dialog.specialPorpuseAttack.takeDown.title": "Take Down",
+  "macros.combat.dialog.specialPorpuseAttack.disable.title": "Disable",
+  "macros.combat.dialog.specialPorpuseAttack.disarm.title": "Disarm",
+  "macros.combat.dialog.specialPorpuseAttack.trapping.title": "Trapping",
+  "macros.combat.dialog.specialPorpuseAttack.knockOut.title": "Knock Out",
+  "macros.combat.dialog.specialPorpuseAttack.directed.title": "Directed",
   "macros.combat.dialog.weapon.critic.title": "Critic",
   "macros.combat.dialog.weapon.title": "Weapon",
   "macros.combat.dialog.weaponAttack.title": "Weapon attack",
