--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -702,7 +702,7 @@
   "dialogs.spellCasting.warning.preparedSpell": "No tienes este Conjuro Preparado",
   "dialogs.spellCasting.warning.zeonAccumulated": "No cuentas con suficiente Zeon Acumulado",
   "dialogs.spellCasting.warning.zeonPool": "No cuentas con suficiente Zeon",
-  "dialogs.specificAttack.warning.disableMustChoose": "Debes elegir un Ataque Apuntado",
+  "dialogs.specialPorpuseAttack.warning.disableMustChoose": "Debes elegir un Ataque Apuntado",
   "macros.combat.dialog.applyAndCloseButton.title": "Aplicar y salir",
   "macros.combat.dialog.applyAndCloseButtonTooltip.title": "Aplicar cambios como los puntos de fatiga usados o el daño en las fichas de los personajes implicados",
   "macros.combat.dialog.at.title": "TA",
@@ -735,12 +735,12 @@
   "macros.combat.dialog.combatMod.secondaryCritic.title": "Usar crítico secundario",
   "macros.combat.dialog.combatMod.multipleDefensesPenalty.title": "Penalizador por defensa continua",
   "macros.combat.dialog.combatMod.fatigueUsed.title": "Fatiga usada",
-  "macros.combat.dialog.combatMod.knockDown.title": "Derribo",
-  "macros.combat.dialog.combatMod.knockDownSmallWeapon.title": "Derribo con arma pequeña",
+  "macros.combat.dialog.combatMod.takeDown.title": "Derribo",
+  "macros.combat.dialog.combatMod.takeDownSmallWeapon.title": "Derribo con arma pequeña",
   "macros.combat.dialog.combatMod.disarm.title": "Desarmar",
-  "macros.combat.dialog.combatMod.immobilize.title": "Presa",
+  "macros.combat.dialog.combatMod.trapping.title": "Presa",
   "macros.combat.dialog.combatMod.knockOut.title": "Inconsciencia sin Contundente",
-  "macros.combat.dialog.combatMod.targeted.title": "Ataque apuntado",
+  "macros.combat.dialog.combatMod.directed.title": "Ataque apuntado",
   "macros.combat.dialog.combatMod.surprised.title": "Sorprendido",
   "macros.combat.dialog.combatMod.offensiveExpertise.title": "Erudición Ofensiva",
   "macros.combat.dialog.combatMod.defensiveExpertise.title": "Erudición Defensiva",
@@ -873,43 +873,43 @@
   "macros.combat.dialog.warning.supernaturalShieldNotFound.mystic": "No tienes escudos místicos activos, has click en Escudo nuevo",
   "macros.combat.dialog.warning.supernaturalShieldNotFound.psychic": "No tienes escudos psíquicos activos, has click en Escudo nuevo",
   "macros.combat.dialog.hasCritic.title": "Realiza un crítico a {target}",
-  "macros.combat.dialog.targetedAttack.title": "Ataque apuntado",
-  "macros.combat.dialog.targetedAttack.none.title": "-",
-  "macros.combat.dialog.targetedAttack.neck.title": "Cuello",
-  "macros.combat.dialog.targetedAttack.head.title": "Cabeza",
-  "macros.combat.dialog.targetedAttack.elbow.title": "Codo",
-  "macros.combat.dialog.targetedAttack.heart.title": "Corazón",
-  "macros.combat.dialog.targetedAttack.groin.title": "Ingle",
-  "macros.combat.dialog.targetedAttack.foot.title": "Pie",
-  "macros.combat.dialog.targetedAttack.hand.title": "Mano",
-  "macros.combat.dialog.targetedAttack.knee.title": "Rodilla",
-  "macros.combat.dialog.targetedAttack.abdomen.title": "Abdomen",
-  "macros.combat.dialog.targetedAttack.arm.title": "Brazo",
-  "macros.combat.dialog.targetedAttack.upperForearm.title": "Antebrazo superior",
-  "macros.combat.dialog.targetedAttack.lowerForearm.title": "Antebrazo inferior",
-  "macros.combat.dialog.targetedAttack.leg.title": "Pierna",
-  "macros.combat.dialog.targetedAttack.thigh.title": "Muslo",
-  "macros.combat.dialog.targetedAttack.calf.title": "Pantorrilla",
-  "macros.combat.dialog.targetedAttack.torso.title": "Torso",
-  "macros.combat.dialog.targetedAttack.ribs.title": "Costillas",
-  "macros.combat.dialog.targetedAttack.stomach.title": "Estómago",
-  "macros.combat.dialog.targetedAttack.kidneys.title": "Riñones",
-  "macros.combat.dialog.targetedAttack.chest.title": "Pecho",
-  "macros.combat.dialog.targetedAttack.eye.title": "Ojo",
-  "macros.combat.dialog.targetedAttack.wrist.title": "Muñeca",
-  "macros.combat.dialog.targetedAttack.shoulder.title": "Hombro",
-  "macros.combat.dialog.targetedAttack.side.left.title": "[Izquierda]",
-  "macros.combat.dialog.targetedAttack.side.right.title": "[Derecha]",
-  "macros.combat.dialog.targetedAttack.side.none.title": "[-]",
-  "macros.combat.dialog.specificAttack.title": "Ataque específico",
-  "macros.combat.dialog.specificAttack.causeDamage.title": "Aplicar Daño",
-  "macros.combat.dialog.specificAttack.none.title": "-",
-  "macros.combat.dialog.specificAttack.knockDown.title": "Derribo",
-  "macros.combat.dialog.specificAttack.disable.title": "Inutilizar",
-  "macros.combat.dialog.specificAttack.disarm.title": "Desarmar",
-  "macros.combat.dialog.specificAttack.immobilize.title": "Presa",
-  "macros.combat.dialog.specificAttack.knockOut.title": "Inconsciencia",
-  "macros.combat.dialog.specificAttack.targeted.title": "Apuntado",
+  "macros.combat.dialog.directedAttack.title": "Ataque apuntado",
+  "macros.combat.dialog.directedAttack.none.title": "-",
+  "macros.combat.dialog.directedAttack.neck.title": "Cuello",
+  "macros.combat.dialog.directedAttack.head.title": "Cabeza",
+  "macros.combat.dialog.directedAttack.elbow.title": "Codo",
+  "macros.combat.dialog.directedAttack.heart.title": "Corazón",
+  "macros.combat.dialog.directedAttack.groin.title": "Ingle",
+  "macros.combat.dialog.directedAttack.foot.title": "Pie",
+  "macros.combat.dialog.directedAttack.hand.title": "Mano",
+  "macros.combat.dialog.directedAttack.knee.title": "Rodilla",
+  "macros.combat.dialog.directedAttack.abdomen.title": "Abdomen",
+  "macros.combat.dialog.directedAttack.arm.title": "Brazo",
+  "macros.combat.dialog.directedAttack.upperForearm.title": "Antebrazo superior",
+  "macros.combat.dialog.directedAttack.lowerForearm.title": "Antebrazo inferior",
+  "macros.combat.dialog.directedAttack.leg.title": "Pierna",
+  "macros.combat.dialog.directedAttack.thigh.title": "Muslo",
+  "macros.combat.dialog.directedAttack.calf.title": "Pantorrilla",
+  "macros.combat.dialog.directedAttack.torso.title": "Torso",
+  "macros.combat.dialog.directedAttack.ribs.title": "Costillas",
+  "macros.combat.dialog.directedAttack.stomach.title": "Estómago",
+  "macros.combat.dialog.directedAttack.kidneys.title": "Riñones",
+  "macros.combat.dialog.directedAttack.chest.title": "Pecho",
+  "macros.combat.dialog.directedAttack.eye.title": "Ojo",
+  "macros.combat.dialog.directedAttack.wrist.title": "Muñeca",
+  "macros.combat.dialog.directedAttack.shoulder.title": "Hombro",
+  "macros.combat.dialog.directedAttack.side.left.title": "[Izquierda]",
+  "macros.combat.dialog.directedAttack.side.right.title": "[Derecha]",
+  "macros.combat.dialog.directedAttack.side.none.title": "[-]",
+  "macros.combat.dialog.specialPorpuseAttack.title": "Ataque específico",
+  "macros.combat.dialog.specialPorpuseAttack.causeDamage.title": "Aplicar Daño",
+  "macros.combat.dialog.specialPorpuseAttack.none.title": "-",
+  "macros.combat.dialog.specialPorpuseAttack.takeDown.title": "Derribo",
+  "macros.combat.dialog.specialPorpuseAttack.disable.title": "Inutilizar",
+  "macros.combat.dialog.specialPorpuseAttack.disarm.title": "Desarmar",
+  "macros.combat.dialog.specialPorpuseAttack.trapping.title": "Presa",
+  "macros.combat.dialog.specialPorpuseAttack.knockOut.title": "Inconsciencia",
+  "macros.combat.dialog.specialPorpuseAttack.directed.title": "Apuntado",
   "macros.combat.dialog.weapon.critic.title": "Crítico",
   "macros.combat.dialog.weapon.title": "Arma",
   "macros.combat.dialog.weaponAttack.title": "Ataque",
