update - areaAttack penalty

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -746,6 +746,7 @@
   "macros.combat.dialog.combatMod.surprised.title": "Sorprendido",
   "macros.combat.dialog.combatMod.offensiveExpertise.title": "Erudición Ofensiva",
   "macros.combat.dialog.combatMod.defensiveExpertise.title": "Erudición Defensiva",
+  "macros.combat.dialog.combatMod.areaAttack.title": "Maniobra de Ataque en Área",
   "macros.combat.dialog.applyDamage.title": "Aplicar daño",
   "macros.combat.dialog.applyCritic.title": "Aplicar crítico",
   "macros.combat.dialog.counterAttackBonus.title": "Bono al contraataque",
@@ -905,6 +906,7 @@
   "macros.combat.dialog.directedAttack.side.none.title": "[-]",
   "macros.combat.dialog.specialPorpuseAttack.title": "Ataque específico",
   "macros.combat.dialog.specialPorpuseAttack.causeDamage.title": "Aplicar Daño",
+  "macros.combat.dialog.specialPorpuseAttack.areaAttack.title": "Maniobra de ataque en área",
   "macros.combat.dialog.specialPorpuseAttack.none.title": "-",
   "macros.combat.dialog.specialPorpuseAttack.takeDown.title": "Derribo",
   "macros.combat.dialog.specialPorpuseAttack.disable.title": "Inutilizar",
