--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -746,6 +746,7 @@
   "macros.combat.dialog.combatMod.surprised.title": "Surprised",
   "macros.combat.dialog.combatMod.offensiveExpertise.title": "Offensive Expertise",
   "macros.combat.dialog.combatMod.defensiveExpertise.title": "Defensive Expertise",
+  "macros.combat.dialog.combatMod.areaAttack.title": "Area Attack Maneuver",
   "macros.combat.dialog.applyDamage.title": "Apply damage",
   "macros.combat.dialog.applyCritic.title": "Apply critic",
   "macros.combat.dialog.counterAttackBonus.title": "Counterattack bonus",
@@ -903,6 +904,7 @@
   "macros.combat.dialog.directedAttack.side.none.title": "[-]",
   "macros.combat.dialog.specialPorpuseAttack.title": "Special Porpuse Attack",
   "macros.combat.dialog.specialPorpuseAttack.causeDamage.title": "Apply damage",
+  "macros.combat.dialog.specialPorpuseAttack.areaAttack.title": "Area Attack Maneuver",
   "macros.combat.dialog.specialPorpuseAttack.none.title": "-",
   "macros.combat.dialog.specialPorpuseAttack.takeDown.title": "Take Down",
   "macros.combat.dialog.specialPorpuseAttack.disable.title": "Disable",
