--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -747,6 +747,8 @@
   "macros.combat.dialog.combatMod.offensiveExpertise.title": "Offensive Expertise",
   "macros.combat.dialog.combatMod.defensiveExpertise.title": "Defensive Expertise",
   "macros.combat.dialog.combatMod.areaAttack.title": "Area Attack Maneuver",
+  "macros.combat.dialog.combatMod.BlockEnergy.title": "Block Energy",
+  "macros.combat.dialog.combatMod.cantMoveOutOfArea.title": "Cant Move out of Area",
   "macros.combat.dialog.applyDamage.title": "Apply damage",
   "macros.combat.dialog.applyCritic.title": "Apply critic",
   "macros.combat.dialog.counterAttackBonus.title": "Counterattack bonus",
@@ -855,6 +857,8 @@
   "macros.combat.dialog.showResultsButton.title": "Send to chat the results",
   "macros.combat.dialog.showRoll.title": "Show roll",
   "macros.combat.dialog.combat.accumulateDefenses.title": "Accumulate defense",
+  "macros.combat.dialog.combat.blockEnergy.title": "Block energy",
+  "macros.combat.dialog.combat.moveOutOfArea.title": "Move out of Area",
   "macros.combat.dialog.surprised.title": "Surprised",
   "macros.combat.dialog.spell.title": "Spell",
   "macros.combat.dialog.mysticShield.title": "Mystic shield",
