--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -747,6 +747,8 @@
   "macros.combat.dialog.combatMod.offensiveExpertise.title": "Erudición Ofensiva",
   "macros.combat.dialog.combatMod.defensiveExpertise.title": "Erudición Defensiva",
   "macros.combat.dialog.combatMod.areaAttack.title": "Maniobra de Ataque en Área",
+  "macros.combat.dialog.combatMod.BlockEnergy.title": "Bloquear Energía",
+  "macros.combat.dialog.combatMod.cantMoveOutOfArea.title": "No puede salir del área",
   "macros.combat.dialog.applyDamage.title": "Aplicar daño",
   "macros.combat.dialog.applyCritic.title": "Aplicar crítico",
   "macros.combat.dialog.counterAttackBonus.title": "Bono al contraataque",
@@ -857,6 +859,8 @@
   "macros.combat.dialog.showResultsButton.title": "Enviar al chat los resultados",
   "macros.combat.dialog.showRoll.title": "Mostrar tirada",
   "macros.combat.dialog.combat.accumulateDefenses.title": "Acumular defensa",
+  "macros.combat.dialog.combat.blockEnergy.title": "Bloquear engería",
+  "macros.combat.dialog.combat.moveOutOfArea.title": "Moverse fuera del área",
   "macros.combat.dialog.surprised.title": "Sorprendido",
   "macros.combat.dialog.spell.title": "Hechizo",
   "macros.combat.dialog.mysticShield.title": "Escudo místico",
