new - damageBarrier damageReduction damageEnergy

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -79,6 +79,7 @@
   "anima.ui.combat.baseValues.dodge.title": "Dodge",
   "anima.ui.combat.baseValues.extraDamage.title": "Extra damage",
   "anima.ui.combat.baseValues.criticLevel.title": "Critic level",
+  "anima.ui.combat.baseValues.damageBarrier.title": "Damage Barrier",
   "anima.ui.combat.baseValues.title": "Base Values",
   "anima.ui.combat.baseValues.wearArmor.title": "Wear armor",
   "anima.ui.combat.combatSpecialSkill.title": "Special Skills",
@@ -130,12 +131,14 @@
   "anima.ui.combat.weapons.size.title": "Size",
   "anima.ui.combat.weapons.sizeProportion.title": "Size proportion",
   "anima.ui.combat.weapons.special.title": "Special",
+  "anima.ui.combat.weapons.damageEnergy.title": "¿Damage energy?",
   "anima.ui.combat.weapons.strRequired.oneHand.title": "STR req.",
   "anima.ui.combat.weapons.strRequired.twoHands.title": "2H STR req.",
   "anima.ui.combat.weapons.title": "Weapons",
   "anima.ui.combat.weapons.weaponStrength.title": "Weapon STR",
   "anima.ui.combat.supernaturalShields.origin.title": "Origin",
   "anima.ui.combat.supernaturalShields.shieldPoints.title": "Life points",
+  "anima.ui.combat.supernaturalShields.damageBarrier.title": "Damage barrier",
   "anima.ui.combat.supernaturalShields.name.title": "Shield",
   "anima.ui.combat.supernaturalShields.title": "Supernatural shields",
   "anima.ui.contactSection.contactRow.description": "Description",
@@ -314,6 +317,7 @@
   "anima.ui.mystic.spell.grade.maintenanceCost.title": "Maint.",
   "anima.ui.mystic.spell.grade.zeon.title": "Zeon",
   "anima.ui.mystic.spell.hasDailyMaintenance.title": "Daily Mant.?",
+  "anima.ui.mystic.spell.damageEnergy.title": "Damage energy?",
   "anima.ui.mystic.spell.visible.title": "Visible",
   "anima.ui.mystic.spell.level.title": "Level",
   "anima.ui.mystic.spell.spellType.animatic.title": "Animatic",
@@ -466,6 +470,8 @@
   "anima.ui.psychic.psychicPowers.power.footer.hasMaintenance.title": "Maint.",
   "anima.ui.psychic.psychicPowers.power.footer.visible.title": "Visible",
   "anima.ui.psychic.psychicPowers.power.footer.critic.title": "Critic",
+  "anima.ui.psychic.psychicPowers.power.footer.damageEnergy.title": "Damage energy?",
+  "anima.ui.psychic.psychicPowers.power.footer.damageEnergy.select.title": "From",
   "anima.ui.psychic.psychicPowers.power.header.combatType.title": "Combat",
   "anima.ui.psychic.psychicPowers.power.header.actionType.title": "Action",
   "anima.ui.psychic.psychicPowers.power.header.level.title": "Level",
@@ -558,6 +564,7 @@
   "anima.ui.settings.tabVisibility.mystic.title": "Mystic",
   "anima.ui.settings.tabVisibility.psychic.title": "Psychic",
   "anima.ui.settings.tabVisibility.title": "Tab visibility",
+  "anima.ui.settings.advancedSettings.damageResistanceMultiple.title": "Damage resistance multiple",
   "anima.ui.settings.advancedSettings.defenseType.damageResistance.title": "Damage resistance",
   "anima.ui.settings.advancedSettings.defenseType.mass.title": "Mass of enemies",
   "anima.ui.settings.advancedSettings.defenseType.normal.title": "Normal",
@@ -568,11 +575,12 @@
   "anima.ui.settings.advancedSettings.title": "Advanced Settings",
   "anima.ui.settings.automationOptions.title": "Automation options",
   "anima.ui.settings.automationOptions.calculateFatigueModifier.title": "Calculate fatigue modifier",
-  "anima.ui.settings.advancedCharacteristics.zen": "Zen",
-  "anima.ui.settings.advancedCharacteristics.inhuman": "Inhuman",
-  "anima.ui.settings.advancedCharacteristics.inmaterial": "Inmaterial",
-  "anima.ui.settings.advancedCharacteristics.perceiveMystic": "Perceive Mystic",
-  "anima.ui.settings.advancedCharacteristics.perceivePsychic": "Perceive Psychic",
+  "anima.ui.settings.advancedCharacteristics.zen.title": "Zen",
+  "anima.ui.settings.advancedCharacteristics.inhuman.title": "Inhuman",
+  "anima.ui.settings.advancedCharacteristics.inmaterial.title": "Inmaterial",
+  "anima.ui.settings.advancedCharacteristics.perceiveMystic.title": "Perceive Mystic",
+  "anima.ui.settings.advancedCharacteristics.perceivePsychic.title": "Perceive Psychic",
+  "anima.ui.settings.advancedCharacteristics.damageReduction.title": "Damage Reduction",
   "anima.ui.settings.advancedCharacteristics.title": "Advanced Characteristics",
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.hint.title": "Floor items in multiples of 5. Applies for damage",
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.title": "¿Floor calculated damage in multiples of 5?",
@@ -863,6 +871,7 @@
   "macros.combat.dialog.total.title": "Total",
   "macros.combat.dialog.dobleDamage.title": "Shield takes double damage",
   "macros.combat.dialog.immuneToDamage.title": "Shield immune to damage type",
+  "macros.combat.dialog.damageBarrier.title": "Damage barrier",
   "macros.combat.dialog.waitRequest.title": "Attack request sent. Waiting for DM response...",
   "macros.combat.dialog.waitingAttack.title": "Waiting for attacker...",
   "macros.combat.dialog.waitingDefense.title": "Waiting for defender...",
