--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -79,6 +79,7 @@
   "anima.ui.combat.baseValues.dodge.title": "Esquiva",
   "anima.ui.combat.baseValues.extraDamage.title": "Daño extra",
   "anima.ui.combat.baseValues.criticLevel.title": "Nivel de crítico",
+  "anima.ui.combat.baseValues.damageBarrier.title": "Barrera de daño",
   "anima.ui.combat.baseValues.title": "Valores base",
   "anima.ui.combat.baseValues.wearArmor.title": "Llevar armadura",
   "anima.ui.combat.combatSpecialSkill.title": "Habilidades especiales",
@@ -130,12 +131,14 @@
   "anima.ui.combat.weapons.size.title": "Tamaño",
   "anima.ui.combat.weapons.sizeProportion.title": "Proporción tamaño",
   "anima.ui.combat.weapons.special.title": "Especial",
+  "anima.ui.combat.weapons.damageEnergy.title": "¿Daña energía?",
   "anima.ui.combat.weapons.strRequired.oneHand.title": "FUE req.",
   "anima.ui.combat.weapons.strRequired.twoHands.title": "2M FUE req.",
   "anima.ui.combat.weapons.title": "Armas",
   "anima.ui.combat.weapons.weaponStrength.title": "FUE Arma",
   "anima.ui.combat.supernaturalShields.origin.title": "Origen",
   "anima.ui.combat.supernaturalShields.shieldPoints.title": "Puntos de vida",
+  "anima.ui.combat.supernaturalShields.damageBarrier.title": "Barrera de daño",
   "anima.ui.combat.supernaturalShields.name.title": "Escudo",
   "anima.ui.combat.supernaturalShields.title": "Escudos Sobrenaturales",
   "anima.ui.contactSection.contactRow.description": "Descripción",
@@ -316,6 +319,7 @@
   "anima.ui.mystic.spell.grade.maintenanceCost.title": "Mant.",
   "anima.ui.mystic.spell.grade.zeon.title": "Zeón",
   "anima.ui.mystic.spell.hasDailyMaintenance.title": "¿Mant. Diario?",
+  "anima.ui.mystic.spell.damageEnergy.title": "¿Daña energía?",
   "anima.ui.mystic.spell.visible.title": "Visible",
   "anima.ui.mystic.spell.level.title": "Nivel",
   "anima.ui.mystic.spell.spellType.animatic.title": "Anímica",
@@ -468,6 +472,8 @@
   "anima.ui.psychic.psychicPowers.power.footer.hasMaintenance.title": "Mant.",
   "anima.ui.psychic.psychicPowers.power.footer.visible.title": "Visible",
   "anima.ui.psychic.psychicPowers.power.footer.critic.title": "Crítico",
+  "anima.ui.psychic.psychicPowers.power.footer.damageEnergy.title": "¿Daña energía?",
+  "anima.ui.psychic.psychicPowers.power.footer.damageEnergy.select.title": "A partir de",
   "anima.ui.psychic.psychicPowers.power.header.combatType.title": "Combate",
   "anima.ui.psychic.psychicPowers.power.header.actionType.title": "Acción",
   "anima.ui.psychic.psychicPowers.power.header.level.title": "Nivel",
@@ -559,6 +565,7 @@
   "anima.ui.settings.tabVisibility.mystic.title": "Místico",
   "anima.ui.settings.tabVisibility.psychic.title": "Psíquico",
   "anima.ui.settings.tabVisibility.title": "Visibilidad de pestañas",
+  "anima.ui.settings.advancedSettings.damageResistanceMultiple.title": "Multiplo de acumulación",
   "anima.ui.settings.advancedSettings.defenseType.damageResistance.title": "Acumulación",
   "anima.ui.settings.advancedSettings.defenseType.mass.title": "Masa de enemigos",
   "anima.ui.settings.advancedSettings.defenseType.normal.title": "Normal",
@@ -569,11 +576,12 @@
   "anima.ui.settings.advancedSettings.title": "Opciones avanzadas",
   "anima.ui.settings.automationOptions.title": "Opciones de automatización",
   "anima.ui.settings.automationOptions.calculateFatigueModifier.title": "Calcular penalizador por cansancio",
-  "anima.ui.settings.advancedCharacteristics.zen": "Zen",
-  "anima.ui.settings.advancedCharacteristics.inhuman": "Inhumano",
-  "anima.ui.settings.advancedCharacteristics.inmaterial": "Inmaterial",
-  "anima.ui.settings.advancedCharacteristics.perceiveMystic": "Percibir la magia",
-  "anima.ui.settings.advancedCharacteristics.perceivePsychic": "Ver matrices",
+  "anima.ui.settings.advancedCharacteristics.zen.title": "Zen",
+  "anima.ui.settings.advancedCharacteristics.inhuman.title": "Inhumano",
+  "anima.ui.settings.advancedCharacteristics.inmaterial.title": "Inmaterial",
+  "anima.ui.settings.advancedCharacteristics.perceiveMystic.title": "Percibir la magia",
+  "anima.ui.settings.advancedCharacteristics.perceivePsychic.title": "Ver matrices",
+  "anima.ui.settings.advancedCharacteristics.damageReduction.title": "Reducción de Daño",
   "anima.ui.settings.advancedCharacteristics.title": "Características avanzadas",
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.hint.title": "Redondea hacia abajo en múltiplos de 5. Aplica al daño",
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.title": "¿Redondear los daños calculados en múltiplos de 5 hacia la baja?",
