--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -747,7 +747,7 @@
   "macros.combat.dialog.combatMod.offensiveExpertise.title": "Offensive Expertise",
   "macros.combat.dialog.combatMod.defensiveExpertise.title": "Defensive Expertise",
   "macros.combat.dialog.combatMod.areaAttack.title": "Area Attack Maneuver",
-  "macros.combat.dialog.combatMod.BlockEnergy.title": "Block Energy",
+  "macros.combat.dialog.combatMod.blockEnergy.title": "Block Energy",
   "macros.combat.dialog.combatMod.cantMoveOutOfArea.title": "Cant Move out of Area",
   "macros.combat.dialog.applyDamage.title": "Apply damage",
   "macros.combat.dialog.applyCritic.title": "Apply critic",
@@ -767,6 +767,7 @@
   "macros.combat.dialog.castOverride.title": "Cast spell without validations",
   "macros.combat.dialog.critic.title": "Critic",
   "macros.combat.dialog.damage.title": "Damage",
+  "macros.combat.dialog.areaAttack.title": "Area attack",
   "macros.combat.dialog.psychic.damageModifier.title": "Damage modifier",
   "macros.combat.dialog.damageDeal.title": "Damage deal",
   "macros.combat.dialog.criticRoll.title": "Critic Roll",
