--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -937,6 +937,7 @@
   "macros.mysticAct.dialog.spareActConfirm.body.title": "Do you want to make use of the Spare ACT?",
   "macros.mysticAct.dialog.spareActConfirm.title": "You still have {spareAct} ACT",
   "macros.mysticAct.dialog.message.title": "Accumulate <b>{act}</b> Zeon",
+  "macros.mysticCast.dialog.message.title": "Casted <b>{spell}</b> - {grade}",
   "macros.dialog.error.multipleSelectedToken.title": "Only can select one token",
   "macros.dialog.error.noSelectedToken.title": "You don't have selected a token",
   "macros.dialog.zeonWithstandPain.succeed.title": "Maintains concentration",
