update - mysticMacro maintained spells automation

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -295,6 +295,7 @@
   "anima.ui.mystic.preparedSpells.grade.title": "Grado",
   "anima.ui.mystic.preparedSpells.name.title": "Conjuro",
   "anima.ui.mystic.preparedSpells.title": "Conjuros preparados",
+  "anima.ui.mystic.maintainedSpells.maintain.title": "Mantener",
   "anima.ui.mystic.maintainedSpells.innate.title": "Innato?",
   "anima.ui.mystic.maintainedSpells.maintenanceCost.title": "Coste",
   "anima.ui.mystic.maintainedSpells.name.title": "Conjuro",
@@ -618,6 +619,8 @@
   "anima.ui.tabs.zeon": "Zeon Puro",
   "anima.ui.tabs.preparedSpells": "Preparar Conjuro",
   "anima.ui.tabs.releaseAct": "Liberar",
+  "anima.ui.tabs.mysticCast": "Lanzar",
+  "anima.ui.tabs.spellMaintenances": "Mantenimientos",
   "anima.ui.titleSection.title": "Títulos",
   "anima.ui.tabs.status": "Estados",
   "anima.ui.weapons.different.title": "Diferente / Desarmado",
@@ -928,7 +931,10 @@
   "macros.damageCalculator.dialog.ta.title": "TA",
   "macros.damageCalculator.dialog.title": "Calculadora de daño",
   "macros.mysticCast.dialog.button.title": "Lanzar Conjuro",
-  "macros.mysticCast.dialog.title": "Lanzar Conjuro",
+  "macros.mysticCast.dialog.button.maintain.title": "Actualizar Mantenimientos",
+  "macros.mysticCast.dialog.casted.title": "Lanzados",
+  "macros.mysticCast.dialog.maintain.title": "Mantenidos",
+  "macros.mysticCast.dialog.title": "Conjuros",
   "macros.mysticAct.dialog.title": "ACT",
   "macros.mysticAct.dialog.zeon.title": "Zeon",
   "macros.mysticAct.dialog.zeonAccumulated.title": "Zeon Acumulado",
