new - automate innatePowers psychicCast Macro

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -621,8 +621,9 @@
   "anima.ui.tabs.zeon": "Zeon Puro",
   "anima.ui.tabs.preparedSpells": "Preparar Conjuro",
   "anima.ui.tabs.releaseAct": "Liberar",
-  "anima.ui.tabs.mysticCast": "Lanzar",
+  "anima.ui.tabs.cast": "Lanzar",
   "anima.ui.tabs.spellMaintenances": "Mantenimientos",
+  "anima.ui.tabs.innatePsychicPowers": "Innatos",
   "anima.ui.titleSection.title": "Títulos",
   "anima.ui.tabs.status": "Estados",
   "anima.ui.weapons.different.title": "Diferente / Desarmado",
@@ -952,6 +953,12 @@
   "macros.mysticAct.dialog.spareActConfirm.title": "Aún te quedan {spareAct} de ACT",
   "macros.mysticAct.dialog.message.title": "Acumula <b>{act}</b> de Zeon",
   "macros.mysticCast.dialog.message.title": "Lanzó <b>{spell}</b> - {grade}",
+  "macros.psychicCast.dialog.button.title": "Lanzar Poder",
+  "macros.psychicCast.dialog.casted.title": "Lanzados",
+  "macros.psychicCast.dialog.maintain.title": "Innatos",
+  "macros.psychicCast.dialog.button.maintain.title": "Actualizar Innatos",
+  "macros.psychicCast.dialog.message.title": "Lanzó <b>{power}</b>",
+  "macros.psychicCast.dialog.title": "Poderes Psíquicos",
   "macros.dialog.error.multipleSelectedToken.title": "Sólo puedes seleccionar un token",
   "macros.dialog.error.noSelectedToken.title": "No tienes seleccionado a ningún token",
   "macros.dialog.zeonWithstandPain.succeed.title": "Mantiene la concentración",
