--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -422,6 +422,7 @@
   "anima.ui.mystic.zeonRegeneration.title": "Zeon regen.",
   "anima.ui.notesSection.title": "Notes",
   "anima.ui.psychic.innatePsychicPower.amount.title": "Innate amount",
+  "anima.ui.psychic.innatePsychicPower.improveInnatePower.title": "Improve Innate",
   "anima.ui.psychic.innatePsychicPower.effect.title": "Effect",
   "anima.ui.psychic.innatePsychicPower.power.title": "Power",
   "anima.ui.psychic.innatePsychicPower.title": "Innate Psychic Powers",
@@ -437,6 +438,7 @@
   "anima.ui.psychic.psychicPoints.title": "PP",
   "anima.ui.psychic.psychicSettings.title": "Psychic Settings",
   "anima.ui.psychic.psychicSettings.fatigueResistance.title": "Fatigue Resistance",
+  "anima.ui.psychic.psychicSettings.amplifySustainedPower.title": "Amplify Sustained Power",
   "anima.ui.psychic.psychicPotential.potential.title": "Potential",
   "anima.ui.psychic.psychicPotential.title": "Psychic potential",
   "anima.ui.psychic.psychicPowers.actionType.active.title": "Active",
