--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -424,6 +424,7 @@
   "anima.ui.mystic.zeonRegeneration.title": "Regen. Zeon",
   "anima.ui.notesSection.title": "Notas",
   "anima.ui.psychic.innatePsychicPower.amount.title": "Número de Innatos",
+  "anima.ui.psychic.innatePsychicPower.improveInnatePower.title": "Incrementar Innato",
   "anima.ui.psychic.innatePsychicPower.effect.title": "Efecto",
   "anima.ui.psychic.innatePsychicPower.power.title": "Poder",
   "anima.ui.psychic.innatePsychicPower.title": "Poderes Psíquicos Innatos",
@@ -439,6 +440,7 @@
   "anima.ui.psychic.psychicPoints.title": "CV",
   "anima.ui.psychic.psychicSettings.title": "Ajustes Psíquicos",
   "anima.ui.psychic.psychicSettings.fatigueResistance.title": "Resistencia a la Fatiga",
+  "anima.ui.psychic.psychicSettings.amplifySustainedPower.title": "Mantenimiento Añadido",
   "anima.ui.psychic.psychicPotential.potential.title": "Potencial",
   "anima.ui.psychic.psychicPotential.title": "Potencial Psíquico",
   "anima.ui.psychic.psychicPowers.actionType.active.title": "Activo",
