update - psychicCast Macro and Combat

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -439,6 +439,7 @@
   "anima.ui.psychic.psychicSettings.title": "Psychic Settings",
   "anima.ui.psychic.psychicSettings.fatigueResistance.title": "Fatigue Resistance",
   "anima.ui.psychic.psychicSettings.amplifySustainedPower.title": "Amplify Sustained Power",
+  "anima.ui.psychic.psychicSettings.focus.title": "Focus",
   "anima.ui.psychic.psychicPotential.potential.title": "Potential",
   "anima.ui.psychic.psychicPotential.title": "Psychic potential",
   "anima.ui.psychic.psychicPowers.actionType.active.title": "Active",
@@ -858,6 +859,8 @@
   "macros.combat.dialog.newShield.title": "New shield?",
   "macros.combat.dialog.psychicProjection.title": "Psychic projection",
   "macros.combat.dialog.eliminateFatigue.title": "Eliminate Fatigue",
+  "macros.combat.dialog.increasePsychicPotential.title": "Increase Psychic Potential",
+  "macros.combat.dialog.improvePsychicProjection.title": "Improve Psychic Projection",
   "macros.combat.dialog.mentalPatternImbalance.title": "Mental Pattern Imbalance",
   "macros.combat.dialog.requestPermission.title": " requests permission to attack ",
   "macros.combat.dialog.rolled.title": "Dice rolled",
