--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -441,6 +441,7 @@
   "anima.ui.psychic.psychicSettings.title": "Ajustes Psíquicos",
   "anima.ui.psychic.psychicSettings.fatigueResistance.title": "Resistencia a la Fatiga",
   "anima.ui.psychic.psychicSettings.amplifySustainedPower.title": "Mantenimiento Añadido",
+  "anima.ui.psychic.psychicSettings.focus.title": "Calibre",
   "anima.ui.psychic.psychicPotential.potential.title": "Potencial",
   "anima.ui.psychic.psychicPotential.title": "Potencial Psíquico",
   "anima.ui.psychic.psychicPowers.actionType.active.title": "Activo",
@@ -860,6 +861,8 @@
   "macros.combat.dialog.newShield.title": "¿Escudo nuevo?",
   "macros.combat.dialog.psychicProjection.title": "Proyección psíquica",
   "macros.combat.dialog.eliminateFatigue.title": "Eliminar la fatiga",
+  "macros.combat.dialog.increasePsychicPotential.title": "Mejorar el potencial psíquico",
+  "macros.combat.dialog.improvePsychicProjection.title": "Mejorar la proyección psíquica",
   "macros.combat.dialog.mentalPatternImbalance.title": "Desequilibrio de Patrón Mental",
   "macros.combat.dialog.requestPermission.title": " te ha enviado una petición de ataque hacia ",
   "macros.combat.dialog.rolled.title": "Tirada del dado",
