new-feature - armor-reduction weapon-data-upgrade

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -11,14 +11,15 @@
   "anima.ui.aspectSection.size.title": "Size",
   "anima.ui.aspectSection.title": "Aspect",
   "anima.ui.aspectSection.weight.title": "Weight",
-  "anima.ui.characteristics.agility": "Agility",
-  "anima.ui.characteristics.constitution": "Constitution",
-  "anima.ui.characteristics.dexterity": "Dexterity",
-  "anima.ui.characteristics.intelligence": "Intelligence",
-  "anima.ui.characteristics.perception": "Perception",
-  "anima.ui.characteristics.power": "Power",
-  "anima.ui.characteristics.strength": "Strength",
-  "anima.ui.characteristics.willPower": "Willpower",
+  "anima.ui.characteristics.agility.title": "Agility",
+  "anima.ui.characteristics.constitution.title": "Constitution",
+  "anima.ui.characteristics.dexterity.title": "Dexterity",
+  "anima.ui.characteristics.intelligence.title": "Intelligence",
+  "anima.ui.characteristics.perception.title": "Perception",
+  "anima.ui.characteristics.power.title": "Power",
+  "anima.ui.characteristics.strength.title": "Strength",
+  "anima.ui.characteristics.willPower.title": "Willpower",
+  "anima.ui.characteristics.none.title": "-",
   "anima.ui.combat.ammo.amount.title": "Amount",
   "anima.ui.combat.ammo.breaking.base.title": "Base breaking",
   "anima.ui.combat.ammo.breaking.title": "Breaking",
@@ -105,6 +106,7 @@
   "anima.ui.combat.armors.type.title": "Type",
   "anima.ui.combat.armors.wearArmorRequirement.base.title": "Wear Armor Requ. Base",
   "anima.ui.combat.armors.wearArmorRequirement.title": "Wear Armor Requ.",
+  "anima.ui.combat.armors.isImmutable.title": "Is Immutable?",
   "anima.ui.combat.baseValues.attack.title": "Attack",
   "anima.ui.combat.baseValues.block.title": "Block",
   "anima.ui.combat.baseValues.dodge.title": "Dodge",
@@ -113,6 +115,10 @@
   "anima.ui.combat.baseValues.damageBarrier.title": "Damage Barrier",
   "anima.ui.combat.baseValues.title": "Base Values",
   "anima.ui.combat.baseValues.wearArmor.title": "Wear armor",
+  "anima.ui.combat.baseValues.extraReducedArmor.title": "Extra Reduced AT",
+  "anima.ui.combat.baseValues.ignoreArmor.title": "Ignore Armor",
+  "anima.ui.combat.baseValues.immutableArmor.title": "Inmodifiable Armor",
+  "anima.ui.combat.baseValues.damageEnergy.title": "Damage Energy",
   "anima.ui.combat.combatSpecialSkill.title": "Special Skills",
   "anima.ui.combat.combatTables.title": "Combat tables",
   "anima.ui.combat.finalArmor.title": "Final armor",
@@ -129,6 +135,13 @@
   "anima.ui.combat.weapon.sizeProportion.enormous.title": "Enormous",
   "anima.ui.combat.weapon.sizeProportion.giant.title": "Giant",
   "anima.ui.combat.weapon.sizeProportion.normal.title": "Normal",
+	"anima.ui.combat.weapon.attribute.title": "Attribute",
+  "anima.ui.combat.weapon.damageCalculation.title": "Damage Calculation",
+	"anima.ui.combat.weapon.baseDamageCalculationType.default.title": "Default",
+	"anima.ui.combat.weapon.baseDamageCalculationType.presence.title": "Presence",
+	"anima.ui.combat.weapon.baseDamageCalculationType.doublePresence.title": "Double Presence",
+  "anima.ui.combat.weapons.extraReducedArmor.title": "Extra Reduced AT",
+  "anima.ui.combat.weapons.ignoreArmor.title": "Ignore Armor?",
   "anima.ui.combat.weapons.ammo.title": "Ammo",
   "anima.ui.combat.weapons.poisons.title": "Poison",
   "anima.ui.combat.weapons.attack.roll.message": "attacks with ",
