--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -11,14 +11,15 @@
   "anima.ui.aspectSection.size.title": "Corpulence",
   "anima.ui.aspectSection.title": "Aspect",
   "anima.ui.aspectSection.weight.title": "Poids",
-  "anima.ui.characteristics.agility": "Agilité",
-  "anima.ui.characteristics.constitution": "Constitution",
-  "anima.ui.characteristics.dexterity": "Dexterité",
-  "anima.ui.characteristics.intelligence": "Intelligence",
-  "anima.ui.characteristics.perception": "Perception",
-  "anima.ui.characteristics.power": "Pouvoir",
-  "anima.ui.characteristics.strength": "Force",
-  "anima.ui.characteristics.willPower": "Volonté",
+  "anima.ui.characteristics.agility.title": "Agilité",
+  "anima.ui.characteristics.constitution.title": "Constitution",
+  "anima.ui.characteristics.dexterity.title": "Dexterité",
+  "anima.ui.characteristics.intelligence.title": "Intelligence",
+  "anima.ui.characteristics.perception.title": "Perception",
+  "anima.ui.characteristics.power.title": "Pouvoir",
+  "anima.ui.characteristics.strength.title": "Force",
+  "anima.ui.characteristics.willPower.title": "Volonté",
+  "anima.ui.characteristics.none.title": "-",
   "anima.ui.combat.ammo.amount.title": "Quantité",
   "anima.ui.combat.ammo.breaking.base.title": "Base fracassement",
   "anima.ui.combat.ammo.breaking.title": "Fracassement",
