--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -11,14 +11,15 @@
   "anima.ui.aspectSection.size.title": "Tamaño",
   "anima.ui.aspectSection.title": "Aspecto",
   "anima.ui.aspectSection.weight.title": "Peso",
-  "anima.ui.characteristics.agility": "Agilidad",
-  "anima.ui.characteristics.constitution": "Constitución",
-  "anima.ui.characteristics.dexterity": "Destreza",
-  "anima.ui.characteristics.intelligence": "Inteligencia",
-  "anima.ui.characteristics.perception": "Percepción",
-  "anima.ui.characteristics.power": "Poder",
-  "anima.ui.characteristics.strength": "Fuerza",
-  "anima.ui.characteristics.willPower": "Voluntad",
+  "anima.ui.characteristics.agility.title": "Agilidad",
+  "anima.ui.characteristics.constitution.title": "Constitución",
+  "anima.ui.characteristics.dexterity.title": "Destreza",
+  "anima.ui.characteristics.intelligence.title": "Inteligencia",
+  "anima.ui.characteristics.perception.title": "Percepción",
+  "anima.ui.characteristics.power.title": "Poder",
+  "anima.ui.characteristics.strength.title": "Fuerza",
+  "anima.ui.characteristics.willPower.title": "Voluntad",
+  "anima.ui.characteristics.none.title": "-",
   "anima.ui.combat.ammo.amount.title": "Cantidad",
   "anima.ui.combat.ammo.breaking.base.title": "Rotura base",
   "anima.ui.combat.ammo.breaking.title": "Rotura",
@@ -105,6 +106,7 @@
   "anima.ui.combat.armors.type.title": "Tipo",
   "anima.ui.combat.armors.wearArmorRequirement.base.title": "Req. Llevar Armadura Base",
   "anima.ui.combat.armors.wearArmorRequirement.title": "Req. Llevar Armadura",
+  "anima.ui.combat.armors.isImmutable.title": "Es inmodificable?",
   "anima.ui.combat.baseValues.attack.title": "Ataque",
   "anima.ui.combat.baseValues.block.title": "Parada",
   "anima.ui.combat.baseValues.dodge.title": "Esquiva",
@@ -113,10 +115,13 @@
   "anima.ui.combat.baseValues.damageBarrier.title": "Barrera de daño",
   "anima.ui.combat.baseValues.title": "Valores base",
   "anima.ui.combat.baseValues.wearArmor.title": "Llevar armadura",
+  "anima.ui.combat.baseValues.extraReducedArmor.title": "Reducción de TA extra",
+  "anima.ui.combat.baseValues.ignoreArmor.title": "Ignora armadura",
+  "anima.ui.combat.baseValues.immutableArmor.title": "Armadura inmodificable",
+  "anima.ui.combat.baseValues.damageEnergy.title": "Daña energía",
   "anima.ui.combat.combatSpecialSkill.title": "Habilidades especiales",
   "anima.ui.combat.combatTables.title": "Tablas de combate",
   "anima.ui.combat.finalArmor.title": "Armadura final",
-  "anima.ui.combat.weapon.manageabilityType.oneHand.title": "1 mano",
   "anima.ui.combat.weapon.manageabilityType.oneOrTwoHand.title": "1 ó 2 manos",
   "anima.ui.combat.weapon.manageabilityType.title": "Manejabilidad",
   "anima.ui.combat.weapon.manageabilityType.twoHand.title": "2 manos",
@@ -129,6 +134,13 @@
   "anima.ui.combat.weapon.sizeProportion.enormous.title": "Enorme",
   "anima.ui.combat.weapon.sizeProportion.giant.title": "Gigante",
   "anima.ui.combat.weapon.sizeProportion.normal.title": "Normal",
+	"anima.ui.combat.weapon.attribute.title": "Característica",
+  "anima.ui.combat.weapon.damageCalculation.title": "Cálculo daño base",
+	"anima.ui.combat.weapon.baseDamageCalculationType.default.title": "Por defecto",
+	"anima.ui.combat.weapon.baseDamageCalculationType.presence.title": "Presencia",
+	"anima.ui.combat.weapon.baseDamageCalculationType.doublePresence.title": "Doble de Presencia",
+  "anima.ui.combat.weapons.extraReducedArmor.title": "Reducción de TA extra",
+  "anima.ui.combat.weapons.ignoreArmor.title": "¿Ignora armadura?",
   "anima.ui.combat.weapons.ammo.title": "Munición",
   "anima.ui.combat.weapons.poisons.title": "Veneno",
   "anima.ui.combat.weapons.attack.roll.message": "ataque con ",
