update - painModifieres for penalties

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -598,11 +598,11 @@
   "anima.ui.status.effectsList.disable.title": "Disable",
   "anima.ui.status.effectsList.edit.title": "Edit",
   "anima.ui.status.effectsList.delete.title": "Delete",
-  "anima.ui.status.painModifiers.title": "Pain Modifiers",
-  "anima.ui.status.painModifiers.fatigue.title": "Fatigue",
-  "anima.ui.status.painModifiers.physical.title": "Physical",
-  "anima.ui.status.painModifiers.incapacitation.title": "Incapacitation",
-  "anima.ui.status.painModifiers.withstandPain.title": "Withstand Pain",
+  "anima.ui.status.penalties.title": "Penalties",
+  "anima.ui.status.penalties.fatigue.title": "Fatigue",
+  "anima.ui.status.penalties.pain.title": "Pain",
+  "anima.ui.status.penalties.physicalDeficiency.title": "Physical Deficiency",
+  "anima.ui.status.penalties.withstandPain.title": "Withstand Pain",
   "anima.ui.tabs.combat": "Combat",
   "anima.ui.tabs.damageResistance": "Damage Resistance",
   "anima.ui.tabs.domine": "Domine",
