--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -601,11 +601,11 @@
   "anima.ui.status.effectsList.disable.title": "Desactivar",
   "anima.ui.status.effectsList.edit.title": "Editar",
   "anima.ui.status.effectsList.delete.title": "Eliminar",
-  "anima.ui.status.painModifiers.title": "Modificadores del Dolor",
-  "anima.ui.status.painModifiers.fatigue.title": "Cansancio",
-  "anima.ui.status.painModifiers.physical.title": "Físico",
-  "anima.ui.status.painModifiers.incapacitation.title": "Incapacitación",
-  "anima.ui.status.painModifiers.withstandPain.title": "Resistir el Dolor",
+  "anima.ui.status.penalties.title": "Penalizadores",
+  "anima.ui.status.penalties.fatigue.title": "Cansancio",
+  "anima.ui.status.penalties.pain.title": "Dolor",
+  "anima.ui.status.penalties.physicalDeficiency.title": "Carencia Física",
+  "anima.ui.status.penalties.withstandPain.title": "Resistir el Dolor",
   "anima.ui.tabs.combat": "Combate",
   "anima.ui.tabs.damageResistance": "Acumulación",
   "anima.ui.tabs.domine": "Domine",
